--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.5",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "moment": "^2.24.0",
     "papaparse": "^5.1.1",
     "react": "^16.13.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
